--- a/index.html
+++ b/index.html
@@ -1,11 +1,266 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Django Firma Demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <!-- navbar -->
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Django Firmasi</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Ana Sehife</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Haqqimizda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Vizyonumuz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Elaqe</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar end -->
+
+    <!-- carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://picsum.photos/id/11/1200/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/id/12/1200/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/id/13/1200/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/id/14/1200/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/id/15/1200/400" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <!-- carousel end -->
+
+    <div class="container-fluid mb-4">
+        <!-- hero content -->
+        <div class="bg-dark bg-gradient p-4 border-bottom border-top">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+                    <div class="container-fluid">
+                        <h1 class="display-1 fw-bold text-center">Django</h1>
+                        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui,
+                            non eveniet officiis
+                            inventore quisquam quod rerum nihil quia ut iusto beatae recusandae cupiditate dolores
+                            voluptates esse minus! Dolore, voluptatem?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- hero content end -->
+
+        <!-- About us -->
+        <div class="row bg-dark text-light">
+            <div class="col-sm-6 ms-0 ps-0">
+                <img src="https://picsum.photos/id/16/600/250" alt="" class="w-100">
+            </div>
+            <div class="col-sm-6 d-flex justify-content-center align-items-center">
+                <div class="text-center">
+                    <h2 class="display-2">Haqqimizda</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, sit.</p>
+                    <p>Commodi explicabo sequi sint voluptate vitae exercitationem iste ipsum repudiandae.</p>
+                    <p>Quam, facere illo reiciendis quos saepe totam. Quibusdam, hic quasi.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- about us end -->
+
+    <!-- Products -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="text-center">Mehsullarimiz</h2>
+            </div>
+            <hr>
+            <div class="col-sm-4 mb-2">
+                <div class="card">
+                    <img src="https://picsum.photos/id/17/400/250" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Mehsul 1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Arasdir</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 mb-2">
+                <div class="card">
+                    <img src="https://picsum.photos/id/18/400/250" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Mehsul 2</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Arasdir</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 mb-2">
+                <div class="card">
+                    <img src="https://picsum.photos/id/19/400/250" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Mehsul 3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Arasdir</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Products End -->
+
+    <!-- Projects -->
+    <div class="container">
+        <div class="row my-4">
+            <div class="col-sm-12">
+                <h2 class="text-center">Projelerimiz</h2>
+                <hr>
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/21/100/80" alt="" class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/22/100/80" alt="" class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/23/100/80" alt="" class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/24/100/80" alt="" class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/25/100/80" alt="" class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/26/100/80" alt="" class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/27/100/80" alt="" class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/28/100/80" alt="" class="w-100 img-thumbnail"></div>
+        </div>
+    </div>
+
+    <!-- Projects End -->
+
+    <!-- Footeer -->
+    <div class="bg-dark bg-gradient text-light mt-5">
+        <div class="container">
+            <footer class="pt-5">
+                <div class="row">
+                    <div class="col-6 col-md-2 mb-3">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Features</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Pricing</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">About</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-6 col-md-2 mb-3">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Features</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Pricing</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">About</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-6 col-md-2 mb-3">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Features</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Pricing</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">About</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-5 offset-md-1 mb-3">
+                        <form>
+                            <h5>Subscribe to our newsletter</h5>
+                            <p>Monthly digest of what's new and exciting from us.</p>
+                            <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                                <label for="newsletter1" class="visually-hidden">Email address</label>
+                                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                                <button class="btn btn-primary" type="button">Subscribe</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top ">
+                    <p>© 2023 Company, Inc. All rights reserved.</p>
+                    <ul class="list-unstyled d-flex">
+                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                                    <use xlink:href="#twitter"></use>
+                                </svg></a></li>
+                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                                    <use xlink:href="#instagram"></use>
+                                </svg></a></li>
+                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg color="white" class="bi" width="24" height="24">
+                                    <use xlink:href="#facebook"></use>
+                                </svg></a></li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
+    </div>
+    <!-- Footer End -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
