haqqimizda sehifesi yaradildi

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Ana Sehife</a>
+                        <a class="nav-link active" href="index.html">Ana Sehife</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Haqqimizda</a>
+                        <a class="nav-link" href="haqqimizda.html">Haqqimizda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Vizyonumuz</a>
+                        <a class="nav-link" href="vizyonumuz.html">Vizyonumuz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Elaqe</a>
+                        <a class="nav-link" href="elaqe.html">Elaqe</a>
                     </li>
                 </ul>
             </div>
