--- a/haqqimizda.html
+++ b/haqqimizda.html
@@ -1,11 +1,202 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Haqqimizda | Django Firma Demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <!-- navbar -->
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Django Firmasi</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Ana Sehife</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="haqqimizda.html">Haqqimizda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="vizyonumuz.html">Vizyonumuz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="elaqe.html">Elaqe</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar end -->
+
+
+
+    <div class="container-fluid mb-4">
+        <div class="row">
+            <div class="col-sm-12">
+                <img src="https://picsum.photos/id/41/1200/450" alt="" class="w-100">
+            </div>
+        </div>
+        <!-- hero content -->
+        <div class="bg-dark bg-gradient p-4 border-bottom border-top">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+                    <div class="container-fluid">
+                        <h1 class="display-1 fw-bold text-center">Haqqimizda</h1>
+                        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui,
+                            non eveniet officiis
+                            inventore quisquam quod rerum nihil quia ut iusto beatae recusandae cupiditate dolores
+                            voluptates esse minus! Dolore, voluptatem?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- hero content end -->
+
+
+    </div>
+
+
+    <!-- Projects -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+               <h2>Vizyonumuz</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa totam, earum ut itaque consectetur dolores, accusantium laudantium ipsam est cupiditate ipsa, officia neque deleniti ratione omnis corporis quo excepturi necessitatibus!</p>
+               <p>Cumque adipisci alias rerum aspernatur molestias odio aperiam id. Est maiores iusto amet sapiente accusamus voluptatem expedita perspiciatis possimus eius ut laudantium aliquid quo tenetur iste maxime quidem, sunt odit.</p>
+               <p>Magnam ipsum facere modi voluptates ab dolorem suscipit dicta a numquam eveniet reprehenderit eum odio, reiciendis neque et consequuntur cumque. Et quae dolorem necessitatibus totam laboriosam fugit vero, eveniet nam.</p>
+               <hr>
+               <h2>Misyonumuz</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates unde autem nisi sed, porro in doloribus, consectetur magni ipsam veritatis magnam debitis nulla quos! Ab aperiam cupiditate incidunt corporis pariatur?</p>
+                <p>Repellendus libero ex ab facilis, delectus eos in saepe doloremque impedit sequi, officiis omnis cumque. Delectus sequi nihil in. Nam sequi temporibus sapiente veritatis necessitatibus! Repudiandae, animi! Itaque, soluta alias.</p>
+                <p>Porro, tempore? Minima magni dolorem expedita maxime non repellat nemo id quod nostrum sed, voluptate quibusdam quis aliquid exercitationem, nihil autem obcaecati similique molestias optio doloremque repudiandae. Cupiditate, expedita quod.</p>
+                <p>Ea iusto ratione libero quis laboriosam pariatur mollitia similique, iure placeat ex maxime commodi quidem inventore reiciendis fugiat cumque dolor omnis quae ullam dolores nostrum adipisci quam soluta voluptates. Dolorum.</p>
+                <ul>
+                    <li>Lorem, ipsum.</li>
+                    <li>Expedita, aliquid.</li>
+                    <li>Molestiae, minus!</li>
+                    <li>Autem, rerum.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row my-4">
+            <div class="col-sm-12">
+                <h2 class="text-center">Projelerimiz</h2>
+                <hr>
+            </div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/21/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/22/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/23/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/24/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/25/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/26/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/27/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+            <div class="col-sm col-6 mb-1"><img src="https://picsum.photos/id/28/100/80" alt=""
+                    class="w-100 img-thumbnail"></div>
+        </div>
+    </div>
+
+    <!-- Projects End -->
+
+    <!-- Footeer -->
+    <div class="bg-dark bg-gradient text-light mt-5">
+        <div class="container">
+            <footer class="pt-5">
+                <div class="row">
+                    <div class="col-6 col-md-2 mb-3">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Features</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Pricing</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">About</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-6 col-md-2 mb-3">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Features</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Pricing</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">About</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-6 col-md-2 mb-3">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Features</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Pricing</a>
+                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">About</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-5 offset-md-1 mb-3">
+                        <form>
+                            <h5>Subscribe to our newsletter</h5>
+                            <p>Monthly digest of what's new and exciting from us.</p>
+                            <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                                <label for="newsletter1" class="visually-hidden">Email address</label>
+                                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                                <button class="btn btn-primary" type="button">Subscribe</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top ">
+                    <p>© 2023 Company, Inc. All rights reserved.</p>
+                    <ul class="list-unstyled d-flex">
+                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                                    <use xlink:href="#twitter"></use>
+                                </svg></a></li>
+                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                                    <use xlink:href="#instagram"></use>
+                                </svg></a></li>
+                        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg color="white" class="bi" width="24"
+                                    height="24">
+                                    <use xlink:href="#facebook"></use>
+                                </svg></a></li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
+    </div>
+    <!-- Footer End -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
